fix: adjust TOC styling for contrast

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -195,7 +195,7 @@ ul.toc-list {
 }
 
 ul.toc-list li {
-  color: #777;
+  color: #333;
 
   padding: 2px 5px 2px 5px;
   cursor: pointer;
